infrastructure-modules/vpc/5-subnets.tf
resource "aws_subnet" "private" {
  count = length(var.private_subnets)

  vpc_id            = aws_vpc.this.id
  cidr_block        = var.private_subnets[count.index]
  availability_zone = var.azs[count.index]

  tags = merge(
    { Name = "private-${var.azs[count.index]}" },
    var.tags,
    var.private_subnet_tags
  )

}

resource "aws_subnet" "public" {
  count = length(var.public_subnets)

  vpc_id            = aws_vpc.this.id
  cidr_block        = var.public_subnets[count.index]
  availability_zone = var.azs[count.index]

  tags = merge(
    { Name = "public-${var.azs[count.index]}" },
    var.tags,
    var.public_subnet_tags
  )

}
